Implement api for DashBoard and update api for Customer
