# OnlineStores/DTOs/Dashboard/Requests/GetSummaryQuery.cs
@@ -1,0 +1,6 @@
+public record GetSummaryQuery(
+    DateTime? From,
+    DateTime? To,
+    string? Timezone,
+    string? Currency
+);
